--- a/viewer.html
+++ b/viewer.html
@@ -235,34 +235,55 @@
         .columns-controls { display:flex; align-items:center; gap:8px; }
 
         .columns-btn {
-            background: #d4d4d4;
-            border: 1px solid #adadad;
-            color: #333;
-            padding: 6px 12px;
+            background: linear-gradient(135deg, rgba(255,255,255,0.9) 0%, rgba(248,250,252,0.9) 100%);
+            color: #475569;
+            border: 1px solid rgba(203,213,225,0.6);
+            box-shadow: 0 2px 8px rgba(100,116,139,0.1), 0 1px 3px rgba(0,0,0,0.08);
+            font-size: 11px;
             cursor: pointer;
-            font-size: 12px;
-            transition: background-color 0.3s;
+            padding: 6px 10px;
+            border-radius: 6px;
+            transition: all 0.2s ease;
+            font-weight: 500;
             white-space: nowrap;
         }
 
         #savePresetBtn {
             padding: 6px 10px;
-            font-size: 14px;
+            font-size: 11px;
         }
 
         .columns-btn:hover {
-            background: #bfbfbf;
+            background: linear-gradient(135deg, rgba(255,255,255,1) 0%, rgba(241,245,249,1) 100%);
+            transform: translateY(-1px);
+            box-shadow: 0 4px 12px rgba(100,116,139,0.15), 0 2px 6px rgba(0,0,0,0.12);
+            color: #334155;
         }
 
         .preset-select {
-            border: 1px solid #adadad;
-            background: white;
-            color: #333;
-            font-size: 12px;
+            background: linear-gradient(135deg, rgba(255,255,255,0.9) 0%, rgba(248,250,252,0.9) 100%);
+            color: #475569;
+            border: 1px solid rgba(203,213,225,0.6);
+            box-shadow: 0 2px 8px rgba(100,116,139,0.1), 0 1px 3px rgba(0,0,0,0.08);
+            font-size: 11px;
             padding: 6px 10px;
+            border-radius: 6px;
+            transition: all 0.2s ease;
+            font-weight: 500;
             cursor: pointer;
             min-width: 170px;
             max-width: 220px;
+            appearance: none;
+            background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='none' viewBox='0 0 20 20'%3e%3cpath stroke='%23475569' stroke-linecap='round' stroke-linejoin='round' stroke-width='1.5' d='M6 8l4 4 4-4'/%3e%3c/svg%3e");
+            background-position: right 8px center;
+            background-repeat: no-repeat;
+            background-size: 16px;
+        }
+
+        .preset-select:focus {
+            outline: none;
+            border-color: #3b82f6;
+            box-shadow: 0 0 0 3px rgba(59, 130, 246, 0.1);
         }
 
         .preset-select option {
@@ -527,53 +548,260 @@
             background: #fff;
             border: 1px solid #adadad;
             box-shadow: 0 6px 16px rgba(0,0,0,0.15);
-            padding: 8px;
-            min-width: 260px;
+            padding: 12px;
+            min-width: 350px;
+            width: 350px;
             display: none;
+            border-radius: 8px;
         }
-        .config-section { margin-bottom: 10px; }
+        .config-section { margin-bottom: 12px; }
         .config-title {
-            font-size: 12px;
-            font-weight: 700;
-            color: #555;
-            margin: 4px 0 6px 0;
-            text-transform: uppercase;
-            letter-spacing: .02em;
+            font-size: 13px;
+            font-weight: 600;
+            color: #1e293b;
+            margin: 0 0 10px 0;
+            padding-bottom: 6px;
+            border-bottom: 2px solid #e2e8f0;
         }
         .visibility-list {
-            display: grid;
-            grid-template-columns: repeat(3, minmax(0, 1fr));
-            gap: 6px;
-            max-height: 260px;
-            overflow: auto;
+            display: flex;
+            flex-direction: column;
+            gap: 4px;
+            max-height: 200px;
+            overflow-y: auto;
+            padding: 6px;
+            background: rgba(255,255,255,0.8);
+            border-radius: 6px;
+            border: 1px solid rgba(203,213,225,0.4);
         }
         .visibility-list label {
             display: flex;
             align-items: center;
             gap: 8px;
-            font-size: 12px;
+            font-size: 11px;
             cursor: pointer;
             padding: 6px 8px;
-            background: #fff;
-            border: 1px solid #e3e6ed;
+            background: rgba(255, 255, 255, 0.8);
+            border: 1px solid rgba(203,213,225,0.4);
+            border-radius: 4px;
+            transition: all 0.2s ease;
+            font-weight: 500;
+        }
+        .visibility-list label:hover {
+            background: rgba(248,250,252,0.9);
+            border-color: rgba(203,213,225,0.6);
+            transform: translateY(-1px);
+        }
+        .visibility-list label input[type="checkbox"] {
+            margin: 0;
+            accent-color: #3b82f6;
         }
         .order-list {
-            border: 1px solid #e3e6ed;
+            border: 1px solid rgba(203,213,225,0.4);
             padding: 6px;
-            max-height: 260px;
-            overflow: auto;
-            background: #fff;
-            display: grid;
-            grid-template-columns: repeat(3, minmax(0, 1fr));
-            gap: 6px;
+            max-height: 200px;
+            overflow-y: auto;
+            background: rgba(255,255,255,0.8);
+            border-radius: 6px;
+            display: flex;
+            flex-direction: column;
+            gap: 4px;
         }
         .order-item {
             padding: 6px 8px;
-            border: 1px dashed #cfd4e6;
+            border: 1px dashed rgba(203,213,225,0.6);
             cursor: move;
-            background:#fafbff;
+            background: rgba(255, 255, 255, 0.8);
+            border-radius: 4px;
+            transition: all 0.2s ease;
+            font-size: 11px;
+            font-weight: 500;
+            color: #475569;
+            display: flex;
+            align-items: center;
+            gap: 6px;
         }
-        .order-item.dragging { opacity: .6; background:#eef2ff; }
+        .order-item:hover {
+            background: rgba(248,250,252,0.9);
+            border-color: rgba(203,213,225,0.8);
+            transform: translateY(-1px);
+        }
+        .order-item.dragging { 
+            opacity: 0.6; 
+            background: rgba(59,130,246,0.1);
+            border-color: #3b82f6;
+            transform: rotate(2deg) scale(1.05);
+        }
+        .order-item::before {
+            content: '⋮⋮';
+            color: #94a3b8;
+            font-size: 12px;
+            line-height: 1;
+        }
+
+        /* Melhorias no feedback visual para checkboxes */
+        .visibility-list label.checked {
+            background: rgba(34, 197, 94, 0.1);
+            border-color: #22c55e;
+        }
+
+        .visibility-list label.unchecked {
+            background: rgba(239, 68, 68, 0.1);
+            border-color: #ef4444;
+        }
+
+        /* Estilo para preset ativo */
+        .preset-select option:checked {
+            background-color: rgba(59, 130, 246, 0.1);
+        }
+
+        /* Feedback visual para drag na ordem */
+        .order-item.drag-over {
+            border-style: solid;
+            border-color: #3b82f6;
+            background: rgba(59, 130, 246, 0.05);
+        }
+
+        /* Scrollbar personalizada para listas */
+        .visibility-list::-webkit-scrollbar,
+        .order-list::-webkit-scrollbar {
+            width: 6px;
+        }
+
+        .visibility-list::-webkit-scrollbar-track,
+        .order-list::-webkit-scrollbar-track {
+            background: rgba(248,250,252,0.5);
+            border-radius: 3px;
+        }
+
+        .visibility-list::-webkit-scrollbar-thumb,
+        .order-list::-webkit-scrollbar-thumb {
+            background: rgba(100,116,139,0.3);
+            border-radius: 3px;
+        }
+
+        .visibility-list::-webkit-scrollbar-thumb:hover,
+        .order-list::-webkit-scrollbar-thumb:hover {
+            background: rgba(100,116,139,0.5);
+        }
+
+        /* Dropdown de cópia de dados */
+        .copy-dropdown {
+            position: fixed;
+            z-index: 10001;
+            background: #fff;
+            border: 1px solid #adadad;
+            box-shadow: 0 6px 16px rgba(0,0,0,0.15);
+            padding: 12px;
+            min-width: 280px;
+            width: 280px;
+            display: none;
+            border-radius: 8px;
+            max-height: 400px;
+            overflow-y: auto;
+        }
+
+        .copy-section { margin-bottom: 8px; }
+
+        .copy-title {
+            font-size: 14px;
+            font-weight: 600;
+            color: #1e293b;
+            margin: 0 0 12px 0;
+            padding-bottom: 8px;
+            border-bottom: 2px solid #e2e8f0;
+        }
+
+        .copy-options {
+            display: flex;
+            flex-direction: column;
+            gap: 8px;
+        }
+
+        .copy-option-btn {
+            background: linear-gradient(135deg, rgba(255,255,255,0.9) 0%, rgba(248,250,252,0.9) 100%);
+            color: #475569;
+            border: 1px solid rgba(203,213,225,0.6);
+            box-shadow: 0 2px 8px rgba(100,116,139,0.1), 0 1px 3px rgba(0,0,0,0.08);
+            font-size: 12px;
+            cursor: pointer;
+            padding: 8px 12px;
+            border-radius: 6px;
+            transition: all 0.2s ease;
+            font-weight: 500;
+            text-align: left;
+            width: 100%;
+        }
+
+        .copy-option-btn:hover {
+            background: linear-gradient(135deg, rgba(255,255,255,1) 0%, rgba(241,245,249,1) 100%);
+            transform: translateY(-1px);
+            box-shadow: 0 4px 12px rgba(100,116,139,0.15), 0 2px 6px rgba(0,0,0,0.12);
+            color: #334155;
+        }
+
+        .copy-section-divider {
+            font-size: 11px;
+            font-weight: 600;
+            color: #64748b;
+            margin: 12px 0 8px 0;
+            padding: 6px 8px;
+            background: rgba(248,250,252,0.7);
+            border-radius: 4px;
+            text-transform: uppercase;
+            letter-spacing: 0.5px;
+        }
+
+        .copy-columns-list {
+            display: flex;
+            flex-direction: column;
+            gap: 4px;
+            max-height: 200px;
+            overflow-y: auto;
+        }
+
+        .copy-column-item {
+            display: flex;
+            align-items: center;
+            gap: 8px;
+            padding: 6px 8px;
+            background: rgba(255, 255, 255, 0.8);
+            border: 1px solid rgba(203,213,225,0.4);
+            border-radius: 4px;
+            transition: all 0.2s ease;
+            font-size: 11px;
+        }
+
+        .copy-column-item:hover {
+            background: rgba(248,250,252,0.9);
+            border-color: rgba(203,213,225,0.6);
+        }
+
+        .copy-column-btn {
+            background: none;
+            border: none;
+            color: #475569;
+            cursor: pointer;
+            font-size: 10px;
+            padding: 4px 6px;
+            border-radius: 3px;
+            transition: all 0.2s ease;
+            font-weight: 500;
+        }
+
+        .copy-column-btn:hover {
+            background: rgba(59,130,246,0.1);
+            color: #3b82f6;
+        }
+
+        .copy-column-name {
+            flex: 1;
+            font-weight: 500;
+            color: #334155;
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
+        }
 
         /* Overlay para mobile */
         .sidebar-overlay {
@@ -919,19 +1147,20 @@
         .view-mode-switch {
             display: flex;
             gap: 2px;
-            background: #e9ecef;
+            background: rgba(255, 255, 255, 0.3);
             border-radius: 8px;
             padding: 2px;
             margin-left: 20px;
+            border: 1px solid rgba(203,213,225,0.4);
         }
 
         .view-mode-btn {
             padding: 8px 16px;
             border: none;
             background: transparent;
-            color: #6c757d;
+            color: #64748b;
             font-size: 13px;
-            font-weight: 600;
+            font-weight: 500;
             border-radius: 6px;
             cursor: pointer;
             transition: all 0.2s ease;
@@ -939,14 +1168,84 @@
         }
 
         .view-mode-btn:hover {
-            background: rgba(255, 255, 255, 0.5);
-            color: #495057;
+            background: rgba(255, 255, 255, 0.7);
+            color: #475569;
         }
 
         .view-mode-btn.active {
-            background: white;
-            color: #2c3e50;
-            box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
+            background: linear-gradient(135deg, rgba(255,255,255,0.95) 0%, rgba(248,250,252,0.95) 100%);
+            color: #1e293b;
+            box-shadow: 0 2px 8px rgba(59,130,246,0.1), 0 1px 3px rgba(0,0,0,0.05);
+            border-left: 2px solid #3b82f6;
+        }
+
+        /* Área central com filtros */
+        .filter-info {
+            display: flex;
+            align-items: center;
+            gap: 16px;
+            justify-content: center;
+        }
+
+        .filtered-counter {
+            background: rgba(255, 255, 255, 0.8);
+            padding: 6px 12px;
+            border-radius: 6px;
+            font-size: 13px;
+            font-weight: 500;
+            color: #475569;
+            border: 1px solid rgba(203,213,225,0.4);
+            min-width: 120px;
+            text-align: center;
+        }
+
+        .clear-filters-btn {
+            background: linear-gradient(135deg, rgba(255,255,255,0.9) 0%, rgba(248,250,252,0.9) 100%);
+            color: #64748b;
+            border: 1px solid rgba(203,213,225,0.6);
+            box-shadow: 0 2px 8px rgba(100,116,139,0.1), 0 1px 3px rgba(0,0,0,0.08);
+            font-size: 13px;
+            cursor: pointer;
+            padding: 6px 12px;
+            border-radius: 6px;
+            transition: all 0.2s ease;
+            font-weight: 500;
+        }
+
+        .clear-filters-btn:hover {
+            background: linear-gradient(135deg, rgba(255,255,255,1) 0%, rgba(241,245,249,1) 100%);
+            transform: translateY(-1px);
+            box-shadow: 0 4px 12px rgba(100,116,139,0.15), 0 2px 6px rgba(0,0,0,0.12);
+            color: #475569;
+        }
+
+        /* Controles do header direito */
+        .header-controls {
+            display: flex;
+            align-items: center;
+            gap: 8px;
+            position: relative;
+        }
+
+        .header-btn {
+            background: linear-gradient(135deg, rgba(255,255,255,0.9) 0%, rgba(248,250,252,0.9) 100%);
+            color: #64748b;
+            border: 1px solid rgba(203,213,225,0.6);
+            box-shadow: 0 2px 8px rgba(100,116,139,0.1), 0 1px 3px rgba(0,0,0,0.08);
+            font-size: 12px;
+            cursor: pointer;
+            padding: 6px 10px;
+            border-radius: 6px;
+            transition: all 0.2s ease;
+            font-weight: 500;
+            white-space: nowrap;
+        }
+
+        .header-btn:hover {
+            background: linear-gradient(135deg, rgba(255,255,255,1) 0%, rgba(241,245,249,1) 100%);
+            transform: translateY(-1px);
+            box-shadow: 0 4px 12px rgba(100,116,139,0.15), 0 2px 6px rgba(0,0,0,0.12);
+            color: #475569;
         }
 
         /* Responsivo para mobile */
@@ -959,6 +1258,36 @@
             .view-mode-btn {
                 font-size: 12px;
                 padding: 6px 12px;
+            }
+
+            .filter-info {
+                flex-direction: column;
+                gap: 8px;
+                width: 100%;
+            }
+
+            .filtered-counter {
+                font-size: 12px;
+                padding: 4px 8px;
+                min-width: auto;
+            }
+
+            .clear-filters-btn {
+                font-size: 12px;
+                padding: 6px 10px;
+            }
+
+            .header-controls {
+                flex-direction: column;
+                gap: 6px;
+                width: 100%;
+            }
+
+            .header-btn {
+                font-size: 11px;
+                padding: 6px 8px;
+                width: 100%;
+                text-align: center;
             }
         }
 
@@ -1195,15 +1524,20 @@
                 <button id="sidebarToggle" class="sidebar-toggle">☰</button>
                 <span class="app-title">Visualizador SIAA</span>
                 <div class="view-mode-switch">
-                    <button id="switchToOfertas" class="view-mode-btn active">📊 Ofertas</button>
-                    <button id="switchToAlunos" class="view-mode-btn">👥 Alunos</button>
+                    <button id="switchToOfertas" class="view-mode-btn active">📊 Ofertas (<span id="totalOfertas">0</span>)</button>
+                    <button id="switchToAlunos" class="view-mode-btn">👥 Alunos (<span id="totalAlunos">0</span>)</button>
                 </div>
             </div>
             <div class="header-center">
-                <div class="columns-controls">
-                    <button id="clearFiltersBtn" class="columns-btn" title="Limpar todos os filtros">🧹 Limpar Filtros</button>
-                    <button id="columnConfigBtn" class="columns-btn" title="Configuração de Colunas">📊 Organizar Colunas</button>
-                    <button id="copyVisibleBtn" class="columns-btn" title="Copiar tabela visível">📋 Copiar Tabela Visível</button>
+                <div class="filter-info">
+                    <span class="filtered-counter">Filtrados: <span id="filteredRecords">0</span></span>
+                    <button id="clearFiltersBtn" class="clear-filters-btn" title="Limpar todos os filtros">🧹 Limpar Filtros</button>
+                </div>
+            </div>
+            <div class="header-right">
+                <div class="header-controls">
+                    <button id="columnConfigBtn" class="header-btn" title="Configuração de Colunas">📊 Organizar Colunas</button>
+                    <button id="copyDataBtn" class="header-btn" title="Opções de cópia de dados">📋 Copiar Dados</button>
                     <div id="columnConfigDropdown" class="config-dropdown">
                         <div class="config-section">
                             <div class="config-title">Presets</div>
@@ -1222,12 +1556,16 @@
                             <div id="orderList" class="order-list"></div>
                         </div>
                     </div>
-                </div>
-            </div>
-            <div class="header-right">
-                <div class="stats">
-                    <span class="stat-item">Total: <span id="totalRecords">0</span></span>
-                    <span class="stat-item">Filtrados: <span id="filteredRecords">0</span></span>
+                    <div id="copyDataDropdown" class="copy-dropdown">
+                        <div class="copy-section">
+                            <div class="copy-title">📋 Opções de Cópia</div>
+                            <div class="copy-options">
+                                <button id="copyTableBtn" class="copy-option-btn">📊 Copiar Tabela Visível</button>
+                                <div class="copy-section-divider">📂 Copiar Colunas Individuais</div>
+                                <div id="copyColumnsList" class="copy-columns-list"></div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
